# technical_test_idrica

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py
app/routers/: csv_upload_router.py  model_router.py
app/services/: data_processing.py  linear_regression.py
app/utils/: database.py
tests/: test_endpoint_upload_csv.py
tests/routers/: test_endpoint_upload_csv.py  test_endpoints_ml_model.py
tests/services/: test_data_processing.py  test_linear_regression.py  test_ml_model.py
