[tool.poetry]
name = "technical-test-idrica"
version = "0.1.0"
description = ""
authors = ["Carlos Coll <collhuer@gmail.com>"]
readme = "README.md"
packages = [{include = "technical_test_idrica"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
pydantic = "^2.8.2"
numpy = "^2.1.0"
peewee = "^3.17.6"
pytest = "^8.3.2"
pylint = "^3.2.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
